# getting-started-with-robot-framework

./: README.md  pyproject.toml  requirements.txt
Resources/PageObject/KeyDefs/: Common.robot  SeleniumDrivers.robot
Resources/PageObject/Locators/: Locators.py
Tests/Common/: test_action_chains.robot  test_infinite_scroll.robot  test_keyboard_actions.robot  test_locate_elements.robot  test_mouse_actions.robot  test_sel_playground.robot  test_todo_app.robot
